Improve BookingController, BookingRepository and BookingService